# llm-d-latency-predictor

./: .dockerignore  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  Dockerfile-test  Dockerfile.konflux.prediction  Dockerfile.konflux.test  Dockerfile.konflux.training  LICENSE  Makefile  OWNERS  README.md  build-deploy.sh  pyproject.toml  requirements.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo
.github/workflows/: ci-pr-checks.yaml  ci-release.yaml  ci-signed-commits.yaml  copilot-setup-steps.yaml  non-main-gatekeeper.yaml  prow-github.yaml  prow-pr-automerge.yaml  prow-pr-remove-lgtm.yaml  stale.yaml  unstale.yaml
.tekton/: odh-latency-predictor-prediction-pull-request.yaml  odh-latency-predictor-prediction-push.yaml  odh-latency-predictor-test-pull-request.yaml  odh-latency-predictor-test-push.yaml  odh-latency-predictor-training-pull-request.yaml  odh-latency-predictor-training-push.yaml
common/: types.py
deploy/base/: kustomization.yaml
deploy/base/prediction/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/base/test/: job.yaml  kustomization.yaml
deploy/base/training/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml  storageclass.yaml
deploy/overlays/openshift/: kustomization.yaml
deploy/overlays/openshift/prediction/: deployment.yaml  kustomization.yaml  route.yaml  service.yaml
deploy/overlays/openshift/test/: job.yaml  kustomization.yaml
deploy/overlays/openshift/training/: delete-external-service.yaml  delete-storageclass.yaml  deployment.yaml  kustomization.yaml  pvc.yaml
prediction/: Dockerfile  prediction_server.py
src/llm_d_latency_predictor/: prediction_server.py  training_server.py
tests/: Dockerfile  requirements.txt
training/: Dockerfile  training_server.py
