[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-d-latency-predictor"
version = "0.1.0"
description = "Latency prediction service for the llm-d ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "scikit-learn",
    "numpy",
    "pandas",
    "joblib",
    "pydantic",
    "requests",
    "xgboost",
    "lightgbm",
    "orjson",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Minimal pragmatic selection for imported scientific/ML code.
# Stricter rules (N, B, S, RET, SIM, C4, A) can be layered in via follow-up
# PRs once the imported code has been refactored.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes — real bugs (undefined names, etc.)
    "I",     # isort — import ordering
    "UP",    # pyupgrade — modern syntax
]
ignore = [
    "E501",  # line too long — imported code has many lines slightly over 120
    "F401",  # unused imports — try/except capability-detection pattern (xgboost/lightgbm)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
