[project]
name = "llm-d-latency-predictor"
dynamic = ["version"]
requires-python = ">=3.11"
license = "Apache-2.0"
description = "Latency prediction and training servers for llm-d"
dependencies = [
    "aiohttp",
    "fastapi",
    "joblib",
    "lightgbm",
    "numpy",
    "orjson",
    "pandas",
    "pydantic",
    "requests",
    "river",
    "scikit-learn",
    "uvicorn[standard]",
    "xgboost",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "scipy",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Minimal pragmatic selection for imported scientific/ML code.
# Stricter rules (N, B, S, RET, SIM, C4, A) can be layered in via follow-up
# PRs once the imported code has been refactored.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long
    "F401",  # unused imports — try/except capability-detection pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
